исправление тега шапки

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!--ссылки шапки-->
             <ul>
                 <li><a href="./idex.html">Студия</a></li>
-                <li><a href="">Портфолио</a><li>
+                <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
