--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <!--шапка-->
         <nav>
             <!--логотип компании-->
-            <a href=".index.html">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
 
             <!--ссылки шапки-->
             <ul>
-                <li><a href="./idex.html">Студия</a></li>
+                <li><a href="./index.html">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
@@ -94,6 +94,7 @@
         </section>
 
         <!--команда и должности-->
+        <section>        
         <h2>Наша команда</h2>
         
         <ul>
