изменение языка логотипа

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!--шапка-->
         <nav>
             <!--логотип компании-->
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html" lang="en">WebStudio</a>
 
             <!--ссылки шапки-->
             <ul>
@@ -135,7 +135,7 @@
 
     <footer>
         <!--логотип студии-->
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" lang="en">WebStudio</a>
 
         <!--адрес-->
         <address>
